// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prco-check-status for wis when encountering a server error should return fomatted report with message: Server error 1`] = `
"
prco-check-status
server: wis
environment: production

---
Server error for request id: 758317


Finished

"
`;

exports[`prco-check-status for wis when passed a valid request and paths that have spaces should return fomatted report with one entry 1`] = `
"
prco-check-status
server: wis
environment: production

---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%

Finished

"
`;

exports[`prco-check-status for wis when passed a valid request should return fomatted report with one entry 1`] = `
"
prco-check-status
server: wis
environment: production

---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%

Finished

"
`;

exports[`prco-check-status for wis when passed an invalid request should return fomatted report with one message: Status unavailable 1`] = `
"
prco-check-status
server: wis
environment: production

---
Status unavailable for: 838317



Finished

"
`;

exports[`prco-check-status for wis when passed multiple invalid requests should return fomatted report with mutiple messages: Status unavailable 1`] = `
"
prco-check-status
server: wis
environment: production

---
Status unavailable for: 838317



---
Status unavailable for: 838317



Finished

"
`;

exports[`prco-check-status for wis when passed multiple valid requests should return fomatted report with mutiple entrys 1`] = `
"
prco-check-status
server: wis
environment: production

---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%

---
RequestID: 758317
Details: http://www.wisinspections.com/Customer/InspectionDetails.aspx?requestID=iiHiK1bYlMo%%
Images: http://www.wisinspections.com/Customer/InspectionPictures.aspx?requestID=iiHiK1bYlMo%%
Report: http://www.wisinspections.com/Customer/InspectionReport.aspx?requestID=iiHiK1bYlMo%%

Finished

"
`;
